--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^4.8.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.3.1",
     "enzyme": "^3.11.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
