--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.0",
+    "@types/react-gauge-chart": "^0.3.1",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^4.0.16",
@@ -65,6 +66,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.0",
+    "react-gauge-chart": "^0.3.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
