--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.25",
+    "@types/react-bootstrap-table-next": "^4.0.15",
     "@types/react-dom": "^17.0.0",
     "@types/react-gauge-chart": "^0.3.1",
     "@types/react-redux": "^7.1.5",
@@ -65,6 +66,7 @@
     "prettier": "^2.0.0",
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.0",
     "react-gauge-chart": "^0.3.0",
     "react-icons": "^4.2.0",
