--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,9 @@
     // Disable prefer default export
     "import/prefer-default-export": "off",
     "jsx-a11y/label-has-associated-control": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "@typescript-eslint/dot-notation": ["error"],
+    "no-else-return": "off"
   },
   "overrides": [
     {
