--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
     "enzyme": "^3.11.0",
@@ -68,6 +69,7 @@
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.0",
+    "react-fetch-hook": "^1.8.5",
     "react-gauge-chart": "^0.3.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.1.3",
