--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-gauge-chart": "^0.3.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.1.3",
+    "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
