--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "url": ""
   },
   "dependencies": {
+    "@project-serum/sol-wallet-adapter": "^0.2.5",
+    "@solana/spl-token": "^0.1.6",
+    "@solana/spl-token-registry": "^0.2.212",
+    "@solana/web3.js": "^1.22.0",
     "@types/bootstrap": "^4.6.0",
     "@types/enzyme": "^3.10.4",
     "@types/jest": "^26.0.0",
@@ -63,6 +67,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "eventemitter3": "^4.0.7",
     "node-sass": "4.14.1",
     "prettier": "^2.0.0",
     "react": "^17.0.0",
