--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "url": ""
   },
   "dependencies": {
+    "@ledgerhq/hw-transport": "^6.3.0",
+    "@ledgerhq/hw-transport-webusb": "^6.3.0",
+    "@project-serum/serum": "^0.13.55",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@solana/spl-token": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.212",
@@ -56,7 +59,9 @@
     "@typescript-eslint/parser": "^4.8.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "axios": "^0.21.1",
+    "bn.js": "^5.2.0",
     "bootstrap": "^4.6.0",
+    "buffer-layout": "^1.2.2",
     "classnames": "^2.3.1",
     "enzyme": "^3.11.0",
     "eslint": "^7.11.0",
@@ -68,6 +73,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eventemitter3": "^4.0.7",
+    "google-spreadsheet": "^3.1.15",
     "node-sass": "4.14.1",
     "prettier": "^2.0.0",
     "react": "^17.0.0",
@@ -134,6 +140,7 @@
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "@semantic-release/github": "7.2.0",
+    "@types/google-spreadsheet": "^3.1.5",
     "codecov": "3.8.2",
     "commitizen": "4.2.4",
     "cypress": "6.9.1",
