--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 4
+	"singleQuote": true,
+
+	"trailingComma": "es5",
+
+	"endOfLine": "auto"
 }
