--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
-  "singleQuote": true,
-  "trailingComma": "none"
-}
+    "useTabs": false,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "printWidth": 120,
+    "trailingComma": "es5"
+  }
