--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^4.0.16",
     "@types/redux-mock-store": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "axios": "^0.21.1",
     "bn.js": "^5.2.0",
@@ -64,18 +62,12 @@
     "buffer-layout": "^1.2.2",
     "classnames": "^2.3.1",
     "enzyme": "^3.11.0",
-    "eslint": "^7.11.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
     "eventemitter3": "^4.0.7",
     "google-spreadsheet": "^3.1.15",
     "node-sass": "4.14.1",
-    "prettier": "^2.0.0",
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-table-next": "^4.0.3",
@@ -102,10 +94,18 @@
     "copy-files": "cp -a ./src/. template/src && cp -a ./public/. template/public && cp .eslintignore .eslintrc .prettierrc tsconfig.json tsconfig.eslint.json README.md README_CRA.md template/",
     "prepublishOnly": "yarn clean-files && yarn copy-files",
     "commit": "npx git-cz",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "fix": "eslint src --ext .js,.jsx,.ts,.tsx  --fix",
+    "lint": "eslint --cache \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --cache --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "e2e": "cypress run --spec 'cypress/integration/*'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "yarn run lint:fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -141,11 +141,20 @@
     "@semantic-release/git": "9.0.0",
     "@semantic-release/github": "7.2.0",
     "@types/google-spreadsheet": "^3.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "codecov": "3.8.2",
     "commitizen": "4.2.4",
     "cypress": "6.9.1",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-cypress": "2.11.3",
-    "semantic-release": "17.4.1"
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.2",
+    "semantic-release": "17.4.1",
+    "yarn": "^1.22.11"
   }
 }
