--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-switch": "^6.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.4",
