--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-switch": "^6.0.0",
+    "recharts": "^2.1.6",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.4",
