--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/redux-mock-store": "^1.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bootstrap": "^4.6.0",
     "buffer-layout": "^1.2.2",
@@ -67,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eventemitter3": "^4.0.7",
     "google-spreadsheet": "^3.1.15",
+    "lodash-es": "^4.17.21",
     "node-sass": "4.14.1",
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.1",
@@ -143,6 +145,7 @@
     "@semantic-release/git": "9.0.0",
     "@semantic-release/github": "7.2.0",
     "@types/google-spreadsheet": "^3.1.5",
+    "@types/lodash-es": "^4.17.5",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "codecov": "3.8.2",
