--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,10 @@
   "rules": {
     "eqeqeq": "error",
     "no-console": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": ["off",
+      { "singleQuote": true
+      }
+    ],
     "react/display-name": "off",
     "react/no-children-prop": "off",
     // if you use React 17+; otherwise, turn this on
