--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,12 @@
   "rules": {
     "eqeqeq": "error",
     "no-console": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react/display-name": "off",
     "react/no-children-prop": "off",
     // if you use React 17+; otherwise, turn this on
