--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@project-serum/anchor": "^0.18.2",
     "@project-serum/common": "^0.0.1-beta.3",
     "@project-serum/serum": "^0.13.55",
+    "@solana/wallet-adapter-base": "^0.7.0",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@solana/spl-token": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.212",
