Made all values dynamic

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-USDC-USDR = 3ZmQRcaKCmz9WF5L3noi6tZHhbY3ZmyujqyhTViWuffn
-ETH-SOL = DJZUA9cQCtRiMH66tUJJNKR4RUmw7xZXhKnr7FGgiLKU
-ATLAS-RAY = 8So1qJrk33QCrSaGGmPGxtzPbR3hkPqXjUJjgAbghRa1
-SAMO-RAY = 3xAobruK6JiKnLDwjmBa3UqmqbiZK5YxQyvTYMNsiqFB
+REACT_APP_USDC_USDR=3ZmQRcaKCmz9WF5L3noi6tZHhbY3ZmyujqyhTViWuffn
+REACT_APP_ETH_SOL=DJZUA9cQCtRiMH66tUJJNKR4RUmw7xZXhKnr7FGgiLKU
+REACT_APP_ATLAS_RAY=8So1qJrk33QCrSaGGmPGxtzPbR3hkPqXjUJjgAbghRa1
+REACT_APP_SAMO_RAY=3xAobruK6JiKnLDwjmBa3UqmqbiZK5YxQyvTYMNsiqFB
+REACT_APP_LP_AMOUNT_IN_USD=10
