--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
     "@project-serum/anchor": "^0.18.2",
     "@project-serum/common": "^0.0.1-beta.3",
     "@project-serum/serum": "^0.13.55",
-    "@solana/wallet-adapter-base": "^0.7.0",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@solana/spl-token": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.212",
+    "@solana/wallet-adapter-base": "^0.7.0",
     "@solana/web3.js": "^1.22.0",
     "@types/bootstrap": "^4.6.0",
     "@types/enzyme": "^3.10.4",
     "@types/jest": "^26.0.0",
-    "@types/node": "^12.0.0",
+    "@types/node": "^16.11.12",
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-bootstrap-table-next": "^4.0.15",
@@ -65,6 +65,7 @@
     "bootstrap": "^4.6.0",
     "buffer-layout": "^1.2.2",
     "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-plugin-import": "^2.22.1",
