--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_ETH_SOL=DJZUA9cQCtRiMH66tUJJNKR4RUmw7xZXhKnr7FGgiLKU
 REACT_APP_ATLAS_RAY=8So1qJrk33QCrSaGGmPGxtzPbR3hkPqXjUJjgAbghRa1
 REACT_APP_SAMO_RAY=3xAobruK6JiKnLDwjmBa3UqmqbiZK5YxQyvTYMNsiqFB
 REACT_APP_LP_AMOUNT_IN_USD=10
+REACT_APP_LP_TOKEN_PRICE=100
