--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_ATLAS_RAY=4sGmJRR53TLUo6S1ovFChdEuEssjymPNuEaaDQacuKws
 REACT_APP_SAMO_RAY=AZFu6w1oj7t9QSgcBhpHdVmSp39QLuk6dMcqkqJ1cHXP
 REACT_APP_LP_AMOUNT_IN_USD=10
 REACT_APP_LP_TOKEN_PRICE=100
+REACT_APP_MERCURIAL_API_URL='https://api.mercurial.finance/graphql'
