--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@project-serum/common": "^0.0.1-beta.3",
     "@project-serum/serum": "^0.13.55",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
+    "@saberhq/stableswap-sdk": "^1.12.30",
     "@solana/spl-token": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.212",
     "@solana/wallet-adapter-base": "^0.7.0",
@@ -72,6 +73,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eventemitter3": "^4.0.7",
     "google-spreadsheet": "^3.1.15",
+    "jsbi": "^4.1.0",
     "lodash-es": "^4.17.21",
     "node-sass": "4.14.1",
     "react": "^17.0.0",
