--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
   "dependencies": {
     "@ledgerhq/hw-transport": "^6.3.0",
     "@ledgerhq/hw-transport-webusb": "^6.3.0",
+    "@orca-so/sdk": "^1.2.17",
     "@project-serum/anchor": "^0.18.2",
     "@project-serum/common": "^0.0.1-beta.3",
     "@project-serum/serum": "^0.13.55",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
-    "@saberhq/stableswap-sdk": "^1.12.30",
+    "@saberhq/stableswap-sdk": "^1.12.32",
+    "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.212",
     "@solana/wallet-adapter-base": "^0.7.0",
@@ -66,6 +68,7 @@
     "bootstrap": "^4.6.0",
     "buffer-layout": "^1.2.2",
     "classnames": "^2.3.1",
+    "decimal.js": "^10.3.1",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
