--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "typescript": "~4.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
