--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ REACT_APP_SAMO_RAY=AZFu6w1oj7t9QSgcBhpHdVmSp39QLuk6dMcqkqJ1cHXP
 REACT_APP_LP_AMOUNT_IN_USD=10
 REACT_APP_LP_TOKEN_PRICE=100
 REACT_APP_MERCURIAL_API_URL='https://api.mercurial.finance/graphql'
-API_ENDPOINT=https://api.ratio.finance/api
+REACT_APP_API_ENDPOINT=https://api.ratio.finance/api
