Updated All vaults page to use the new version of the endpoint
Also added REACT_APP_API_ENDPOINT to .env file

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_LP_AMOUNT_IN_USD=10
 REACT_APP_LP_TOKEN_PRICE=100
 REACT_APP_MERCURIAL_API_URL='https://api.mercurial.finance/graphql'
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_API_ENDPOINT=http://157.245.81.121:3000
