--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@ledgerhq/hw-transport": "^6.3.0",
     "@ledgerhq/hw-transport-webusb": "^6.3.0",
     "@orca-so/sdk": "^1.2.17",
-    "@project-serum/anchor": "^0.18.2",
+    "@project-serum/anchor": "0.20.1",
     "@project-serum/common": "^0.0.1-beta.3",
     "@project-serum/serum": "^0.13.55",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@pythnetwork/client": "^2.5.3",
-    "@saberhq/stableswap-sdk": "^1.12.32",
+    "@quarryprotocol/quarry-sdk": "^1.10.6",
+    "@saberhq/anchor-contrib": "1.12.37",
+    "@saberhq/stableswap-sdk": "^1.10.3",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.212",
