--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "bn.js": "^5.2.0",
     "bootstrap": "^4.6.0",
     "buffer-layout": "^1.2.2",
+    "chai": "4.3.4",
+    "chai-as-promised": "^7.1.1",
     "classnames": "^2.3.1",
     "decimal.js": "^10.3.1",
     "dotenv": "^10.0.0",
