ci: added proper configuration to run linter, prettier, test, commitlint on hooks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,14 @@ jobs:
         env:
           CI: true
 
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: wagoid/commitlint-github-action@v4
+
   test:
     runs-on: ubuntu-latest
     needs: [install]
