--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "scripts": {
     "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
+    "start:win": "set CHOKIDAR_USEPOLLING=true && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
