--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,8 +38,8 @@
     "react/jsx-key": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "no-empty": ["error", { "allowEmptyCatch": true }]
+    "@typescript-eslint/no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+    "no-empty": ["error", { "allowEmptyCatch": false }]
     
   },
   "parserOptions": {
