feat: add new env var for default network

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ REACT_APP_ORCA_API_URL='https://api.orca.so/'
 REACT_APP_JUPITER_API_URL='https://quote-api.jup.ag/v1'
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_ENDPOINT=https://backend.ratio.finance
+REACT_APP_DEFAULT_NETWORK='devnet'
