--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ REACT_APP_MERCURIAL_API_URL='https://api.mercurial.finance/graphql'
 REACT_APP_ORCA_API_URL='https://api.orca.so/'
 REACT_APP_JUPITER_API_URL='https://quote-api.jup.ag/v1'
 REACT_APP_API_ENDPOINT='https://backend.ratio.finance'
+REACT_APP_DEFAULT_NETWORK='devnet'
