--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-select": "^4.3.1",
     "react-switch": "^6.0.0",
     "react-toastify": "^8.1.0",
+    "react-use": "^17.3.2",
     "recharts": "^2.1.6",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
