--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "jsbi": "^4.1.0",
     "lodash-es": "^4.17.21",
     "node-sass": "6.0.1",
-    "rc-slider": "^10.0.0-alpha.6",
+    "rc-slider": "^10.0.0",
     "rc-tooltip": "^5.1.1",
     "rc-util": "^5.19.3",
     "react": "^17.0.0",
