--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ REACT_APP_JUPITER_API_URL='https://quote-api.jup.ag/v1'
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_ENDPOINT=https://backend.ratio.finance
 REACT_APP_DEFAULT_NETWORK='devnet'
+GENERATE_SOURCEMAP=false
