--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@pythnetwork/client": "^2.5.3",
     "@quarryprotocol/quarry-sdk": "^2.0.1",
     "@saberhq/anchor-contrib": "1.12.37",
+    "@saberhq/saber-periphery": "1.1.2",
     "@saberhq/stableswap-sdk": "^1.10.3",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.1.6",
