--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "set-interval-async": "^2.0.3",
-    "typescript": "~4.2.0"
+    "typescript": "4.6.4"
   },
   "scripts": {
     "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
