fix: white dot of ratio logo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Ratio Finance Web App",
   "icons": [
     {
-      "src": "image-logo.svg",
+      "src": "logo100.png",
       "type": "image/png",
       "sizes": "100x100"
     },
