--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -17,6 +17,7 @@
     "consistent-return": "off",
     "no-restricted-syntax": "off",
     "import/no-cycle": "off",
+    "no-unused-vars": "off",
     "no-empty": ["error", { "allowEmptyCatch": true }]
   }
 }
