--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "eventemitter3": "^4.0.7",
+    "jsbi": "^4.1.0",
     "lodash-es": "^4.17.21",
     "node-sass": "6.0.1",
     "rc-slider": "^10.0.0",
@@ -149,6 +150,8 @@
     "@types/set-interval-async": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "enzyme": "^3.11.0",
     "codecov": "3.8.2",
     "commitizen": "4.2.4",
     "cypress": "6.9.1",
