--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ REACT_APP_JUPITER_API_URL='https://quote-api.jup.ag/v1'
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_ENDPOINT=https://mainbackend.ratio.finance
 REACT_APP_DEFAULT_NETWORK='mainnet'
+INLINE_RUNTIME_CHUNK=false
+GENERATE_SOURCEMAP=false
