feat: accept multi asset

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ REACT_APP_MERCURIAL_API_URL='https://api.mercurial.finance/graphql'
 REACT_APP_ORCA_API_URL='https://api.orca.so/'
 REACT_APP_JUPITER_API_URL='https://quote-api.jup.ag/v1'
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_API_ENDPOINT=https://mainbackend.ratio.finance
+REACT_APP_API_ENDPOINT=http://localhost:3001
 REACT_APP_DEFAULT_NETWORK='mainnet'
 INLINE_RUNTIME_CHUNK=false
 GENERATE_SOURCEMAP=false
