--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
-    "typescript": "4.6.4"
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
@@ -149,11 +149,11 @@
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
-    "enzyme": "^3.11.0",
     "codecov": "3.8.2",
     "commitizen": "4.2.4",
     "cypress": "6.9.1",
     "cz-conventional-changelog": "3.3.0",
+    "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-cypress": "2.11.3",
