--- a/package.json
+++ b/package.json
@@ -149,11 +149,12 @@
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
-    "enzyme": "^3.11.0",
+    "autoprefixer": "^10.4.7",
     "codecov": "3.8.2",
     "commitizen": "4.2.4",
     "cypress": "6.9.1",
     "cz-conventional-changelog": "3.3.0",
+    "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-cypress": "2.11.3",
@@ -161,8 +162,12 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.3.2",
-    "semantic-release": "17.4.1"
+    "semantic-release": "17.4.1",
+    "tailwindcss": "^3.1.6",
+    "tailwindcss-rtl": "^0.9.0",
+    "tailwindcss-typography": "^3.1.0"
   },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
