--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@saberhq/stableswap-sdk": "^1.10.3",
     "@solana/spl-token": "^0.1.6",
     "@solana/web3.js": "^1.22.0",
+    "axios": "^0.27.2",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bootstrap": "^4.6.0",
