--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
-    "typescript": "4.6.4"
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
